# neoism

./: .gitignore  404.html  Cargo.toml  Dockerfile  NOTICE  changelog.html  contributing.html  docker-compose.yml  index.html  install.sh  sitemap.xml
neoism-extensions/: Cargo.toml  build.rs
neoism-extensions/src/: agent_config.rs  install_runner.rs  lib.rs  managed_bin.rs  manifest.rs  mason.rs
neoism-extensions/src/install_runner/: ecosystems.rs  managed.rs  process.rs  release.rs  resolution.rs  runtime.rs  tests.rs
neoism-frontend/desktop/: Cargo.toml
neoism-frontend/desktop/src/: agent_server.rs  bootstrap.rs  embedded_daemon.rs  lib.rs  main.rs  mashup.rs  server_registry.rs
neoism-frontend/desktop/src/app/: daemon_pump.rs  editor_grid_diag.rs  freeze_watchdog.rs  mod.rs  user_event_dispatch.rs  window_server_session.rs
neoism-frontend/desktop/src/app/window_event/: close.rs  dnd.rs  mouse.rs  scroll.rs
neoism-frontend/desktop/src/bridges/: mod.rs  translate.rs  utils.rs
neoism-frontend/desktop/src/context/: factories.rs  manager.rs  tab.rs
neoism-frontend/desktop/src/context/manager/: builders.rs  daemon_link.rs  daemon_sessions.rs  helpers.rs  ingest.rs  lifecycle.rs  navigation.rs  test.rs
neoism-frontend/desktop/src/context/tab/: backends.rs  context_editor.rs  context_pump.rs  tests.rs
neoism-frontend/desktop/src/daemon_client/: mod.rs  remote_files.rs
neoism-frontend/desktop/src/editor/file_tree/: state.rs  tests.rs  update.rs
neoism-frontend/desktop/src/host/: composer.rs  finder_search.rs  fps.rs  mod.rs  run.rs  state.rs  tabs.rs
neoism-frontend/desktop/src/layout/: border.rs  dimensions.rs
neoism-frontend/desktop/src/layout/grid/: layout.rs  mod.rs
neoism-frontend/desktop/src/neoism/: icon.rs  ide_tools.rs
neoism-frontend/desktop/src/neoism/agent/: api.rs  commands.rs  mod.rs  pane.rs  updates.rs
neoism-frontend/desktop/src/neoism/view/: mod.rs  timeline.rs
neoism-frontend/desktop/src/router/: route.rs  router_impl.rs
neoism-frontend/desktop/src/screen/: chrome_geom.rs  code_crdt.rs  daemon_layout.rs  editor_scroll.rs  lifecycle.rs  markdown_crdt.rs  mod.rs  panes.rs  presence.rs  selection.rs  tests.rs
neoism-frontend/desktop/src/screen/bridges/: acp.rs  agent.rs  code.rs  draw.rs  extensions.rs  file_tree.rs  finder.rs  git_diff.rs  markdown.rs  mod.rs  notebook.rs  palette.rs  tags_view.rs  top_bar.rs  workspace.rs
neoism-frontend/desktop/src/screen/editor_scroll/: editor_command.rs  editor_input.rs  overlay_scroll.rs  status_minimap.rs
neoism-frontend/desktop/src/screen/lifecycle/: block_overlay.rs  context_menu.rs  key_bindings.rs  modal.rs  splash_island.rs
neoism-frontend/desktop/src/screen/panes/: buffer_tabs_input.rs  close_focus.rs  cross_window_dnd.rs  grid_workspace.rs  open_create.rs  terminal_exit.rs
neoism-frontend/desktop/src/terminal/: watcher.rs
neoism-frontend/shared/: Cargo.toml
neoism-frontend/shared/src/: chrome.rs  chrome_policy.rs  editor_snapshot.rs  lib.rs  lifecycle_policy.rs  selection_input.rs  syntax.rs  terminal_scroll_state.rs  touch_policy.rs
neoism-frontend/shared/src/chrome/: config.rs  content.rs  draw.rs  events.rs  paint.rs  tests.rs
neoism-frontend/shared/src/editor/: mod.rs  scroll_model.rs
neoism-frontend/shared/src/editor/code/: mod.rs  (+15 more)
neoism-frontend/shared/src/panels/: breadcrumbs.rs  buffer_tabs.rs  chrome_topbar.rs  completion_menu.rs  context_menu.rs  cross_window_drag.rs  cursorline_overlay.rs  diagnostic_detail.rs  diagnostics_popup.rs  hover_popup.rs  inline_diagnostics.rs  lsp_popup.rs  minimap.rs  mod.rs  notes_sidebar.rs  splash_overlay.rs  status_line.rs
neoism-frontend/shared/src/primitives/: icons.rs  ide_theme.rs  look.rs  mod.rs  pixel_font.rs
neoism-frontend/shared/src/render_policy/: editor_scroll.rs  frame.rs  tests.rs
neoism-frontend/shared/src/services/: workspace_note_index.rs
neoism-frontend/shared/src/session_layout/: tree.rs
neoism-frontend/shared/src/terminal_blocks/: completion.rs  input.rs
neoism-frontend/shared/src/widgets/: diff_card.rs  inline_picker.rs  island.rs  markdown.rs  mod.rs  modal.rs  quad.rs  scrollbar.rs  stock_card.rs
neoism-frontend/shared/tests/: agent_markdown_html.rs  buffer_tabs.rs  desktop_fork_guard.rs  editor_row_fit.rs  file_tree.rs  font_size_policy.rs  status_line.rs
neoism-workspace-daemon/: Cargo.toml
neoism-workspace-daemon/src/: agent.rs  fs_watch.rs  handshake.rs  lib.rs  main.rs  nvim.rs  rust_lsp.rs  server.rs  sessions.rs  workspace.rs
neoism-workspace-daemon/src/agent/: dispatcher.rs  handlers.rs  http.rs  tests.rs  turn.rs
neoism-workspace-daemon/src/language_server/: actions.rs  active_buffer.rs  live_sync.rs  mod.rs  queries.rs
neoism-workspace-daemon/src/language_server/actions/: tests.rs
neoism-workspace-daemon/src/nvim/: diagnostics.rs  redraw.rs  session.rs  tests.rs
neoism-workspace-daemon/src/server/: crdt_seed_tests.rs  hosts_routes.rs  session_routes.rs  socket.rs
neoism-workspace-daemon/src/workspace/: handlers.rs  manager.rs  shell_ops.rs  tests.rs
neoism-workspace-daemon/tests/: crdt_bidirectional.rs  crdt_markdown_pane.rs  crdt_save.rs  crdt_soak.rs  daemon_token_smoke.rs  presence_ws.rs  remote_pty_io.rs  two_daemon_promote.rs  workspace_demote.rs  workspace_promote.rs  workspace_promote_agent.rs  workspace_receive.rs  workspace_ws_integration.rs
neoism-workspace-index/: Cargo.toml
neoism-workspace-index/src/: config.rs  graph_db.rs  lib.rs  query.rs
neoism-workspace-index/src/welcome/: Getting Started.md  Keybindings.md  Multiplayer.md  Notes and Drawings.md  The Terminal.md
neoism-workspace-index/src/welcome/Configuration/: Configuration.md  Mash Up Packs.md  Shaders.md  Themes, Cursor and Fonts.md
neoism-workspace-index/src/welcome/Editor/: Languages and LSP.md  The Editor.md
sugarloaf/: Cargo.toml
sugarloaf/src/: sugarloaf.rs  text.rs
sugarloaf/src/font/: constants.rs  linux.rs  macos.rs  mod.rs
sugarloaf/src/grid/: cpu.rs  metal.rs  mod.rs  vulkan.rs  webgpu.rs
sugarloaf/src/renderer/: vulkan.rs
sugarloaf/src/sugarloaf/: state.rs
(+402 files in other folders)
