[workspace]
members = [
    "sugarloaf",
    "teletypewriter",
    "corcovado",
    "copa",
    "neoism-proc-macros",
    "neoism-backend",
    "neoism-terminal-core",
    "neoism-frontend/wasm",
    "neoism-grapheme-width",
    "neoism-window",
    "neoism-notifier",
    "neoism-protocol",
    "neoism-workspace-index",
    "neoism-workspace-daemon",
    "neoism-terminal-pty",
    "neoism-frontend/shared",
    "neoism-agent/crates/neoism-agent-core",
    "neoism-agent/crates/neoism-agent-server",
    "neoism-agent/crates/neoism-agent-cli",
    "neoism-frontend/desktop",
    "neoism-extensions",
    "neoism-sync",
    "neoism-rm-agent",
    "neoism-remarkable",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
authors = ["Parker Settle", "Neoism contributors"]
edition = "2021"
license = "MIT"
keywords = ["graphics", "terminal", "application"]
# Minimal stable rust version (MSRV)
rust-version = "1.92.0"
repository = "https://github.com/parkers0405/neoism"
homepage = "https://github.com/parkers0405/neoism"
documentation = "https://github.com/parkers0405/neoism#readme"
readme = "README.md"

[workspace.dependencies]
# Note: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
# Sugarloaf example uses path when used locally, but uses
# version from crates.io when published.
teletypewriter = { path = "teletypewriter", version = "0.6.0" }
neoism-backend = { path = "neoism-backend", version = "0.6.0" }
neoism-terminal-core = { path = "neoism-terminal-core", version = "0.6.0" }
neoism-terminal-pty = { path = "neoism-terminal-pty", version = "0.6.0" }
neoism-terminal-wasm = { path = "neoism-frontend/wasm", version = "0.6.0" }
neoism-ui = { path = "neoism-frontend/shared", version = "0.6.0" }
neoism-window = { path = "neoism-window", version = "0.6.0", default-features = false }
neoism-notifier = { path = "neoism-notifier", version = "0.6.0" }
neoism-grapheme-width = { path = "neoism-grapheme-width", version = "0.6.0" }
sugarloaf = { path = "sugarloaf", version = "0.6.0" }
neoism-agent-core = { path = "neoism-agent/crates/neoism-agent-core", version = "0.6.0" }
neoism-agent-server = { path = "neoism-agent/crates/neoism-agent-server", version = "0.6.0" }
neoism-extensions = { path = "neoism-extensions", version = "0.6.0" }
neoism-sync = { path = "neoism-sync", version = "0.6.0" }
neoism-remarkable = { path = "neoism-remarkable", version = "0.6.0" }

# Own dependencies
anyhow = "1.0"
async-stream = "0.3"
copa = { path = "copa", default-features = true, version = "0.6.0" }
neoism-proc-macros = { path = "neoism-proc-macros", version = "0.6.0" }
corcovado = { path = "corcovado", version = "0.6.0" }
raw-window-handle = { version = "0.6.2", features = ["std"] }
parking_lot = { version = "0.12.5", features = [
    "nightly",
    "hardware-lock-elision",
] }
rustc-hash = "2.1.2"
smallvec = "1.15.1"

# unicode-width = "0.2.0"
unicode-width = { package = "unicode-width-16", version = "0.1.0" }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive", "env"] }
fff-search = { version = "0.9.4-nightly.8092cfa", default-features = false }
futures-core = "0.3"
git2 = "0.20.2"
image_rs = { package = "image", version = "0.25.10", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "webp",
    "bmp",
] }
regex = "1.12.3"
onig = { version = "6.5.1", default-features = false }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "28.0.0"
libc = "0.2.185"
smol_str = "0.3.2"
futures = "0.3.31"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.42"
env_logger = "0.11.8"
console_log = "0.2.2"
bitflags = "2.9.0"
iovec = "0.1.4"
console_error_panic_hook = "0.1.7"
tracing = "0.1.41"
objc = { package = "objc-rs", version = "0.3.1" }
memmap2 = "0.9.5"
url = "2.5.4"
criterion = { version = "0.6.0", features = ["html_reports"] }
dashmap = "6.1.0"
flate2 = "1.0"
lazy_static = "1.5"
rand = "0.8"
serde_yaml = "0.9"
sha2 = "0.10"

# Workspace daemon stack
neoism-protocol = { path = "neoism-protocol", version = "0.6.0" }
neoism-workspace-index = { path = "neoism-workspace-index", version = "0.6.0" }
neoism-workspace-daemon = { path = "neoism-workspace-daemon", version = "0.6.0" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
strip = "symbols"          # See split-debuginfo - allows us to drop the size by ~65%
split-debuginfo = "packed" # generates a separate *.dwp/*.dSYM so the binary can get stripped
debug = "full"             # No one needs an undebuggable release binary
codegen-units = 1
incremental = false
lto = true                 # reduces binary size by ~14%
panic = "abort"            # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort

[profile.dev]
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0

[patch.crates-io]
fff-search = { path = "vendor/fff-search" }
