[package]
name = "neoism-extensions"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Managed extension + MCP server installer for Neoism."

[lib]
path = "src/lib.rs"

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ureq = "2"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync", "process", "fs", "io-util", "rt", "macros"] }
dirs = "5"
reqwest = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"
bzip2 = "0.5"
tar = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
