[package]
name = "neoism-workspace-daemon"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Neoism workspace daemon hosting the wire protocol"

[[bin]]
name = "neoism-workspace-daemon"
path = "src/main.rs"

[dependencies]
neoism-protocol = { workspace = true }
neoism-ui = { workspace = true }
neoism-backend = { workspace = true }
neoism-agent-server = { workspace = true }
neoism-workspace-index = { workspace = true }
neoism-terminal-pty = { workspace = true }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1"
url = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
notify = "8.2.0"
thiserror = "1"
futures = { workspace = true }
libc = { workspace = true }
git2 = { version = "0.20", default-features = false }
walkdir = "2"
rand = "0.8"
sha2 = "0.10"
subtle = "2.5"
time = { version = "0.3", features = ["serde", "formatting"] }
dirs = "5"
gethostname = "1.1"
reqwest = { workspace = true }
# nvim proxy: spawn `nvim --embed` per session and forward parsed
# `ext_linegrid` redraw events over the existing websocket. nvim-rs
# owns the msgpack-rpc plumbing; rmpv gives us `Value` for the few
# events we decode by hand.
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
rmpv = "1.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
clap = { workspace = true }
# Unix-socket serving in the binary (same hyper-util accept loop the
# desktop's embedded daemon uses) so a plain `neoism` launch attaches
# to this daemon instead of spawning its own embedded one.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "service"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.24"
