[package]
name = "sugarloaf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Parker Settle", "Neoism contributors"]
build = "build.rs"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**/*.ttf",
    "src/**/*.otf",
    "src/**/*.wgsl",
    "src/components/filters/**/*.slang",
    "src/components/filters/**/*.slangp",
    "src/components/filters/**/*.inc",
    "src/components/filters/**/*.png",
    "src/**/*.rs",
    "src/**/*.metal",
    "src/**/*.glsl",
]
description = "Sugarloaf is the Neoism rendering engine. Designed to be multiplatform via WebGPU (Desktops) and WebAssembly (Web). Originally created by Raphael Amorim for Rio terminal; maintained as part of Neoism."
documentation = "https://docs.rs/crate/sugarloaf/latest"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "wasm32-unknown-unknown",
]

[dependencies]
# `wgpu` and the `librashader-*` filter chain are gated behind the
# `wgpu` feature. Default-off on macOS + Linux (the native Metal /
# Vulkan backends are preferred and skip the wgpu translation
# layer). Windows + WASM enable it via target-specific deps in the
# downstream crate (`frontends/neoism/Cargo.toml`).
wgpu = { workspace = true, optional = true }
naga = { version = "28.0.0", default-features = false, features = [
    "glsl-in",
    "wgsl-in",
    "wgsl-out",
] }
bytemuck = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
image_rs = { workspace = true }
unicode-width = { workspace = true }
# Pure data tables (emoji presentation), wasm-safe — used by the shared
# `prefers_color_emoji` fallback path on every platform.
neoism-grapheme-width = { workspace = true }
web-time = "1.1"
guillotiere = "0.6.2"
rustc-hash = { workspace = true }
raw-window-handle = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
approx = "0.5.1"
lru = "0.16.1"
smallvec = { workspace = true }
skrifa = "0.37.0"
halfbrown = "0.3.0"
half = "2.6.0"
num-traits = "0.2.19"
yazi = { version = "0.2.1", optional = true }
zeno = "0.3.3"
swash = "0.2.7"
futures = { workspace = true }
tiny-skia = "0.12.0"
wide = "1.2.0"
# `twox-hash` and `wyhash` both build cleanly on wasm32 and are used
# unconditionally (see `components/core/shapes.rs` and
# `layout/render_data.rs`). The previous `cfg(not(wasm32))` gate was
# over-conservative — keep them in the common dep block so the wasm
# target compiles.
twox-hash = { version = "2.1.1", default-features = false, features = [
    "std",
    "xxhash64",
] }
wyhash = "0.5.0"
thiserror = "2.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.32.0"
objc-rs = "0.2.8"
core-graphics-types = "0.2.0"
core-graphics = "0.24.0"
core-text = "21.0.0"
core-foundation = "0.10.1"
block = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
memmap2 = { workspace = true }
font-kit = "0.14.3"
walkdir = "2.5.0"
softbuffer = "0.4"
ttf-parser = { version = "0.25.1", default-features = false, features = ["std", "opentype-layout", "apple-layout", "variable-fonts", "glyph-names"] }

# librashader is wgpu-only AND non-wasm: `librashader-pack` reads
# preset bundles via `std::fs`, `librashader-reflect` pulls naga, and
# neither has a verified wasm story. Gate the entire filter chain off
# on wasm32 — the `wgpu` cargo feature still activates the `dep:` keys
# below, but the deps themselves don't exist in the wasm dep graph
# so the activations are no-ops there.
librashader = { version = "0.10.0", default-features = false, features = ["runtime-wgpu", "stable", "presets"], optional = true }
librashader-common = { version = "0.10", optional = true }
librashader-presets = { version = "0.10", optional = true }
librashader-preprocess = { version = "0.10", optional = true }
librashader-pack = { version = "0.10", optional = true }
librashader-reflect = { version = "0.10", features = ["stable", "wgsl"], default-features = false, optional = true }
librashader-runtime = { version = "0.10", optional = true }
librashader-cache = { version = "0.10", optional = true }

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = { version = "0.5.8", default-features = false }
# Direct fontconfig FFI for per-codepoint discovery (the missing
# piece on Linux that macOS gets for free via CoreText). Already in
# the dep tree as a transitive of font-kit; promoted to a direct
# dep so we can call `FcFontSort` + `FcCharSet*` ourselves. Debian
# ships this as `librust-yeslogic-fontconfig-sys-dev`.
yeslogic-fontconfig-sys = "6"
# Native Vulkan backend (mirrors the Metal backend in scope: no librashader
# filters, owns its own swapchain + pipelines). Linux-only for now — Windows
# would need khr::win32_surface added to context::vulkan, and macOS keeps
# the native Metal path.
ash = "0.38"
shaderc = "0.10.1"

# Windows uses font-kit's `SystemSource::all_fonts()` walk for codepoint
# discovery (see `font/windows.rs`). Pure DirectWrite via `IDWriteFontFallback`
# would be the moral twin of CoreText's `CTFontCreateForString`, but the
# only Debian-packaged DirectWrite binding (winapi 0.3) is fading out and the
# higher-level `windows` crate isn't in Debian at all. Ghostty itself
# doesn't ship Windows discovery yet — the font-kit walk keeps Windows on
# par with Linux's previous (no-cascade) state plus codepoint discovery
# from the installed font set, which is the win we actually care about.

[dev-dependencies]
neoism-window = { workspace = true }
png = "0.17.16"
deflate = "1.0.0"
criterion = { workspace = true }

[features]
default = ["scale", "render"]
scale = ["yazi"]
render = ["scale", "zeno/eval"]
# Pull in `wgpu` + the librashader filter chain. Required on Windows
# and (historically) WASM; optional on Linux + macOS where the native
# Vulkan / Metal backends cover everything except the librashader
# CRT/scanline filters. On wasm the librashader-* optional deps are
# `not(target_arch = "wasm32")`-gated below (see the per-target
# dependency tables), so activating `wgpu` from the `web` alias
# pulls in `wgpu` itself and skips the filter chain.
wgpu = [
    "dep:wgpu",
    "dep:librashader",
    "dep:librashader-common",
    "dep:librashader-presets",
    "dep:librashader-preprocess",
    "dep:librashader-pack",
    "dep:librashader-reflect",
    "dep:librashader-runtime",
    "dep:librashader-cache",
]
# Browser entrypoint. Aliases `wgpu` so existing `cfg(feature = "wgpu")`
# blocks stay live in source, but the per-target dep table below makes
# the librashader-* optional deps disappear from the wasm32 dep graph
# (their `dep:` activation is a no-op when the dep itself is gated out
# by `target.cfg`). `components::filters` is also gated off on wasm.
# Activate with `--features web` when building for `wasm32-unknown-unknown`.
web = ["wgpu"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Per-target override of the workspace `wgpu` pin so the browser
# entrypoint can opt into the `webgpu` + `webgl` adapter backends.
# The workspace pin (`Cargo.toml`) takes default features only, which
# leaves the browser backends out. Activated by the `web` feature.
# NOTE: enabling both `webgpu` and `webgl` would activate wgpu's webgpu
# Instance path, which (as of 28.0.0) hardcodes supported_backends to
# BROWSER_WEBGPU only and refuses to fall back to GL — see TODO in
# wgpu-28.0.0/src/backend/webgpu.rs:938. Until that's fixed upstream we
# ship the webgl path only; it works on every browser. Re-add `webgpu`
# once wgpu emits a unified supported_backends mask.
wgpu = { workspace = true, features = ["webgl"], optional = true }
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
js-sys = "0.3.61"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3.77", features = [
    "Location",
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    # "Gpu",
    # "GpuAdapter",
    # "GpuAddressMode",
    # "GpuAutoLayoutMode",
    # "GpuBindGroup",
    # "GpuBindGroupDescriptor",
    # "GpuBindGroupEntry",
    # "GpuBindGroupLayout",
    # "GpuBindGroupLayoutDescriptor",
    # "GpuBindGroupLayoutEntry",
    # "GpuBlendComponent",
    # "GpuBlendFactor",
    # "GpuBlendOperation",
    # "GpuBlendState",
    # "GpuBuffer",
    # "GpuBufferBinding",
    # "GpuBufferBindingLayout",
    # "GpuBufferBindingType",
    # "GpuBufferDescriptor",
    # "GpuCanvasAlphaMode",
    # "GpuCanvasContext",
    # "GpuCanvasConfiguration",
    # "GpuColorDict",
    # "GpuColorTargetState",
    # "GpuCommandBuffer",
    # "GpuCommandBufferDescriptor",
    # "GpuCommandEncoder",
    # "GpuCommandEncoderDescriptor",
    # "GpuCompareFunction",
    # "GpuCompilationInfo",
    # "GpuCompilationMessage",
    # "GpuCompilationMessageType",
    # "GpuComputePassDescriptor",
    # "GpuComputePassEncoder",
    # "GpuComputePipeline",
    # "GpuComputePipelineDescriptor",
    # "GpuCullMode",
    # "GpuDepthStencilState",
    # "GpuDevice",
    # "GpuDeviceDescriptor",
    # "GpuDeviceLostInfo",
    # "GpuDeviceLostReason",
    # "GpuError",
    # "GpuErrorFilter",
    # "GpuExtent2dDict", Not yet implemented in web_sys
    # "GpuExtent3dDict",
    # "GpuFeatureName",
    # "GpuFilterMode",
    # "GpuFragmentState",
    # "GpuFrontFace",
    # "GpuImageCopyBuffer",
    # "GpuImageCopyExternalImage",
    # "GpuTexelCopyTextureInfo",
    # "GpuTexelCopyTextureInfoTagged",
    # "GpuImageDataLayout",
    # "GpuIndexFormat",
    # "GpuLoadOp", # commented to avoid wasm-bindgen duplicate enum with wgpu's internal use
    # "gpu_map_mode",
    # "GpuMipmapFilterMode",
    # "GpuMultisampleState",
    # "GpuObjectDescriptorBase",
    # "GpuOrigin2dDict",
    # "GpuOrigin3dDict",
    # "GpuOutOfMemoryError",
    # "GpuPipelineDescriptorBase",
    # "GpuPipelineLayout",
    # "GpuPipelineLayoutDescriptor",
    # "GpuPowerPreference",
    # "GpuPrimitiveState",
    # "GpuPrimitiveTopology",
    # "GpuProgrammableStage",
    # "GpuQuerySet",
    # "GpuQuerySetDescriptor",
    # "GpuQueryType",
    # "GpuQueue",
    # "GpuRenderBundle",
    # "GpuRenderBundleDescriptor",
    # "GpuRenderBundleEncoder",
    # "GpuRenderBundleEncoderDescriptor",
    # "GpuRenderPassColorAttachment",
    # "GpuRenderPassDepthStencilAttachment",
    # "GpuRenderPassDescriptor",
    # "GpuRenderPassEncoder",
    # "GpuRenderPipeline",
    # "GpuRenderPipelineDescriptor",
    # "GpuRequestAdapterOptions",
    # "GpuSampler",
    # "GpuSamplerBindingLayout",
    # "GpuSamplerBindingType",
    # "GpuSamplerDescriptor",
    # "GpuShaderModule",
    # "GpuShaderModuleDescriptor",
    # "GpuStencilFaceState",
    # "GpuStencilOperation",
    # "GpuStorageTextureAccess",
    # "GpuStorageTextureBindingLayout",
    # "GpuStoreOp",
    # "GpuSupportedFeatures",
    # "GpuSupportedLimits",
    # "GpuTexture",
    # "GpuTextureAspect",
    # "GpuTextureBindingLayout",
    # "GpuTextureDescriptor",
    # "GpuTextureDimension",
    # "GpuTextureFormat",
    # "GpuTextureSampleType",
    # "GpuTextureView",
    # "GpuTextureViewDescriptor",
    # "GpuTextureViewDimension",
    # "GpuUncapturedErrorEvent",
    # "GpuUncapturedErrorEventInit",
    # "GpuValidationError",
    # "GpuVertexAttribute",
    # "GpuVertexBufferLayout",
    # "GpuVertexFormat",
    # "GpuVertexState",
    # "GpuVertexStepMode",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "ImageBitmap",
    "ImageBitmapRenderingContext",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3.61", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
] }
