[package]
name = "neoism"
description = "Neoism is a hardware-accelerated terminal-first editor workspace."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[[bin]]
name = "neoism"
path = "src/main.rs"

[lib]
name = "neoism_desktop"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
wgpu = { workspace = true }
neoism-backend = { workspace = true }
neoism-terminal-core = { workspace = true }
neoism-workspace-index = { workspace = true }
neoism-ui = { workspace = true }
neoism-protocol = { workspace = true }
neoism-extensions = { workspace = true }
neoism-remarkable = { workspace = true, optional = true }
base64 = { workspace = true }
web-time = "1.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = { workspace = true }
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitflags = { workspace = true }
discord-presence = "3.2.0"
fff-search = { workspace = true }
futures = { workspace = true }
jupyter-zmq-client = { version = "1", features = ["tokio-runtime"] }
jupyter-protocol = "2"
neoism-agent-server = { workspace = true }
tokio = { workspace = true }
corcovado = { workspace = true }
regex = { workspace = true }
onig = { workspace = true }
raw-window-handle = { workspace = true }
clap = { version = "4.5.42", features = ["derive"] }
dirs = "6.0.0"
notify = "8.2.0"
rustc-hash = { workspace = true }
rapidhash = { version = "4.4", default-features = false }
image_rs = { workspace = true }
libc = { workspace = true }
gethostname = "1.1"
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
uuid = { workspace = true }
taffy = { version = "0.9.2", features = ["flexbox", "grid"] }
teletypewriter = { workspace = true }
neoism-terminal-pty = { workspace = true }
unicode-width = { workspace = true }
copa = { workspace = true }
url = { workspace = true }
smallvec = { workspace = true }
neoism-window = { workspace = true }
lru = "0.16.0"
neoism-notifier = { workspace = true }
# Embedded-daemon mode (G8): when the desktop binary launches and
# no external daemon is reachable, we spawn a `WorkspaceManager` +
# axum router inside our own process and bind it to a per-user unix
# socket. Pulling the daemon crate in as a library here is the
# whole point of `lib.rs` existing alongside `main.rs` in that crate.
neoism-workspace-daemon = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "service"] }
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-webpki-roots"] }
tower-service = "0.3"

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
cpal = { version = "0.15", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { workspace = true }

[target.'cfg(windows)'.dependencies]
ahash = { version = "0.8.11", default-features = false, features = ["std"] }
dunce = "1.0.5"
tinyvec = { version = "1.8.1", features = ["alloc"] }
windows-sys = { version = "0.60.2", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
] }
# `wgpu` backend is a hard requirement on Windows — there's no native
# DX12/Vulkan-via-ash backend yet, so without it the binary has no
# GPU rendering path. Force it on for Windows builds; Linux/macOS
# builds opt in via `--features wgpu` if they want librashader filters.
[target.'cfg(windows)'.dependencies.sugarloaf]
workspace = true
features = ["wgpu"]
[target.'cfg(windows)'.dependencies.neoism-backend]
workspace = true
features = ["wgpu"]
[target.'cfg(target_arch = "wasm32")'.dependencies.sugarloaf]
workspace = true
features = ["wgpu"]
[target.'cfg(target_arch = "wasm32")'.dependencies.neoism-backend]
workspace = true
features = ["wgpu"]

[features]
default = ["wayland", "x11", "wgpu"]
audio = ["cpal"]
# Optional reMarkable sync extension (work in progress). Off by default —
# a normal build links none of `neoism-remarkable` / `neoism-sync`.
remarkable = ["dep:neoism-remarkable"]
x11 = ["neoism-backend/x11", "neoism-window/x11"]
wayland = [
    "neoism-backend/wayland",
    "neoism-window/wayland",
    "neoism-window/wayland-dlopen",
]
# Pull in wgpu (and the librashader filter chain). Off by default on
# Linux/macOS where the native Vulkan/Metal backends cover everything
# except CRT/scanline filters; auto-enabled on Windows + WASM via
# target-conditional sugarloaf/neoism-backend deps above.
wgpu = ["sugarloaf/wgpu", "neoism-backend/wgpu"]

# "neoism-window/wayland-csd-adwaita-crossfont",

[package.metadata.deb]
name = "neoism"
maintainer = "Neoism contributors"
copyright = "2026-present, Neoism contributors"
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    [
        "../../target/release/neoism",
        "usr/local/bin/",
        "755",
    ],
    [
        "../../misc/neoism.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "../../misc/rio.terminfo",
        "usr/share/info/",
        "644",
    ],
    [
        "../../misc/logo.svg",
        "usr/share/icons/hicolor/scalable/apps/neoism.svg",
        "644",
    ],
    [
        "../../README.md",
        "usr/share/doc/neoism/",
        "644",
    ],
    [
        "../../LICENSE",
        "usr/share/doc/neoism/",
        "664",
    ],
    [
        "../../NOTICE",
        "usr/share/doc/neoism/",
        "644",
    ],
]
extended-description = """\
Neoism is a hardware-accelerated terminal-first editor workspace built from Rio's terminal foundation.
The supported platforms currently consist of BSD, Linux, MacOS and Windows."""
